--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,36 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <div class="box">
+            <ul>
+                <li>
+                    <mat-icon class="icon" >place</mat-icon>
+                    <span> Lorem ipsum.</span>
+                </li>
+                <li>
+                    <mat-icon class="icon" >call</mat-icon>
+                    <span> Lorem ipsum.</span>
+                </li>
+                <li>
+                    <mat-icon class="icon" >mail</mat-icon>
+                    <span> Lorem ipsum dolor.</span>
+                </li>
+            </ul>
+          
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="box">
+          <h2>About Us</h2>
+          <span>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a
+            facilisis nisl, ac vulputate lacus. Nam malesuada consequat ligula,
+            vitae laoreet magna. Fusce blandit dolor arcu, in congue magna
+            dapibus eget.
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
