--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -6,8 +6,9 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/admin/create">Crear producto</a>
-      <a mat-list-item href="admin/table">Tabla</a>
-      <a mat-list-item href="admin/dash">Dashboard</a>
+      <a mat-list-item href="admin/table">Inventario</a>
+      <a mat-list-item href="admin/dash">Home</a>
+      <a mat-list-item href="admin/products">Productos</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
