--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -11,6 +11,9 @@
         margin: 10px;
         list-style:none;
     }
+    button {
+        margin: 5px;
+    }
     
  }
 .box {
@@ -27,3 +30,4 @@
 .icon { 
     color: white; 
 }
+
