--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -9,8 +9,7 @@
       <a mat-list-item href="admin/table">Inventario</a>
       <a mat-list-item href="admin/dash">Home</a>
       <a mat-list-item href="admin/products">Productos</a>
-      <a mat-list-item href="admin/register">Registar nuevo Admin</a>
-      <a mat-list-item href="admin/login">Login</a>
+      <button mat-list-item (click) = "logout()"> Salir</button>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
